mdapi_output_dir/objects/Car_Part__c.object
<CustomObject>
    <label>Car Part</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Car Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Car__c</fullName>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Car Parts</relationshipLabel>
        <relationshipName>Car_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container</label>
        <referenceTo>Container__c</referenceTo>
        <relationshipLabel>Car Parts</relationshipLabel>
        <relationshipName>Car_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>